--- a/index.html
+++ b/index.html
@@ -4,150 +4,254 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shikhar's Resume</title>
+    <title>My Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    <!-- top banner -->
+
+    <div class="top-banner">
+        <div class="container">
+            <div class="small-bold-text banner-text">New to Usability Hub: Open and Closed card sorting</div>
+        </div>
+    </div>
+
+    <!-- nav bar -->
+    <nav>
+        <div class="container main-nav flex">
+            <a herf="#" class="company-logo">
+                <img src="./assets/asset 0.png" alt="company-logo">
+
+            </a>
+            <div class="nav-links">
+                <ul class="flex">
+                    <li><a href="#" class="hover-link">Products</a></li>
+                    <li><a href="#" class="hover-link">Costomer</a></li>
+                    <li><a href="#" class="hover-link">Pricing</a></li>
+                    <li><a href="#" class="hover-link">Resources</a></li>
+                    <li><a href="#" class="hover-link secondary-button">Sing in</a></li>
+                    <li><a href="#" class="hover-link primary-button">Sing up</a></li>
+                </ul>
+
+
+            </div>
+        </div>
+    </nav>
+    <!-- header section -->
     <header>
-        <table>
-            <tr>
-                <td><img width="300" src="./images/image1.png" alt="Shikhar Maurya Photo"><img /></td>
-                <td>
-                    <h1>Shikhar Maurya</h1>
-                    <p><i> Student of <a target="_blank" href="https://thedigicoders.com"> the digi coders</a> &
-                            Software Engineer</i></p>
-                    <p>I ❤️ Web Devlopment and I like learning book 🚀</p>
-                    <nav>
-                        <ul>
-                            <li><a href="#eduction">Eduction</a></li>
-                            <li><a href="#internships">Internships</a></li>
-                            <li><a href="#projects">Projects</a></li>
-                            <li><a href="#contactme">Connect With Me</a></li>
-                        </ul>
+        <div class="container header-section flex">
+            <div class="header-left">
+                <h1>Design Confidently</h1>
+                <p>UsabilityHub is a remote user research plateform that takes the guesswork out of design decisions by
+                    validating them with real users.</p>
+                <a href="#" class="primary-button get-started-btn">Get started</a>
 
-                    </nav>
-                </td>
-            </tr>
-        </table>
+            </div>
+            <div class="header-right">
+                <img src="./assets/asset 1.jpeg" alt="hero image">
+            </div>
 
-        <hr>
-
+        </div>
     </header>
 
-    <!-- Header ends-->
+    <section class="companies-section">
+        <div class="container">
+            <div class="small-bold-text companies-header">The world's best companies rely on usabilityHub to make better
+                design decisions</div>
+            <div class="logos flex">
+                <img class="logo" src="./assets/asset 2.png" alt="">
+                <img class="logo" src="./assets/asset 3.png" alt="">
+                <img class="logo" src="./assets/asset 4.png" alt="">
+                <img class="logo" src="./assets/asset 5.png" alt="">
+                <img class="logo" src="./assets/asset 6.png" alt="">
+                <img class="logo" src="./assets/asset 7.svg" alt="">
+                <img class="logo" src="./assets/asset 8.png" alt="">
+            </div>
+        </div>
+    </section>
 
-    <main>
-        <section id="eduction">-
-            <h2>Eduction</h2>
-            <table border="">
-                <tr>
-                    <th>Course</th>
-                    <th>institute</th>
-                    <th>Year</th>
-                    <th>Result</th>
-                </tr>
-                <tr>
-                    <td>Be in IT</td>
-                    <td>Govt.poly.Unnao</td>
-                    <td>2023</td>
-                    <td>Appearing</td>
-                </tr>
-                <tr>
-                    <td>10<sup>th</sup> grade</td>
-                    <td>S.N.I.C.Ambadker Nagar</td>
-                    <td>71.5%</td>
-                </tr>
-                <tr>
-                    <td>12<sup>th</sup> grade</td>
-                    <td>S.N.I.C.Ambedkar Nagar</td>
-                    <td>2018</td>
-                    <td>66.6%</td>
-                </tr>
-                <tr>
-                    <td>B.A.</td>
-                    <td>Sarvodaya PG collage Ramnagar</td>
-                    <td>2022</td>
-                    <td>74.5%</td>
-                </tr>
-            </table>
-        </section>
+    <section class="features-section">
+        <div class="contaniner">
+            <div class="features-header">
+                <h2>Your user research Swis army knife</h2>
+                <a href="#" class="secondary-button">See all features <i
+                        class="fa-sharp fa-solid fa-right-long"></i></a>
+            </div>
+            <div class="features-area flex">
+                <div class="features-card flex">
+                    <img src="./assets/asset 9.svg" alt="">
+                    <h3>Card Sorting</h3>
+                    <p>Discover how people group and lable information</p>
+                    <a href="#" class="secondary-button">Learn More <i class="fa-sharp fa-solid fa-right-long"></i></a>
+                </div>
 
-        <section id="Internships">-
-            <h2>Internships</h2>
-            <p><strong>Digi Codders</strong>,Lucknow </p>
-            <p><i>Softwer Devloper intern</i></p>
-            <ul>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos perferendis labore, consequatur rerum
-                    debitis excepturi unde blanditiis placeat tempora aut non qui eum nam vitae itaque nostrum iure
-                    suscipit? Voluptatibus quae perferendis omnis alias eos obcaecati quod magni fugit repudiandae!</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse atque nihil perspiciatis laudantium,
-                    culpa
-                    mollitia quaerat nisi. Laborum, ut aliquam!</li>
+                <div class="features-card flex">
+                    <img src="./assets/asset 10.svg" alt="">
+                    <h3>prototype tests</h3>
+                    <p>Discover how people navigate your Figma prototype</p>
+                    <a href="#" class="secondary-button">Learn more <i class="fa-sharp fa-solid fa-right-long"></i></a>
+                </div>
 
-            </ul>
-        </section>
-        <section id="projects">-
-            <h2>Projects</h2>
-            <ul>
-                <li>
-                    <h3>Etherum Voting</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, consequatur. Optio neque modi
-                        nobis dolor accusantium tempore blanditiis ipsam animi, aliquid nisi asperiores doloremque, hic
-                        eligendi sint ad tenetur odit?</p>
-                </li>
-                <li>
-                    <h4>Shuffler</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nulla rerum sint sed molestias
-                        quibusdam dolores corporis provident. Fugit ipsum repudiandae deleniti tenetur est eos quasi,
-                        quibusdam nulla! Aliquid optio dolor delectus eligendi error. Inventore harum minima officiis
-                        voluptatibus exercitationem.</p>
-                </li>
-            </ul>
-            <hr>
-        </section>
-    </main>
+                <div class="features-card flex">
+                    <img src="./assets/asset 11.svg" alt="">
+                    <h3>First click tests</h3>
+                    <p>Test interaction with first click and navigation tests.</p>
+                    <a href="#" class="secondary-button">Learn more <i class="fa-sharp fa-solid fa-right-long"></i></a>
+                </div>
 
-    <!--Main Section Ends-->
+                <div class="features-card flex">
+                    <img src="./assets/asset 12.svg" alt="">
+                    <h3>Design surveys</h3>
+                    <p>Get feedback on images,videos or audio files.</p>
+                    <a href="#" class="secondary-button">Learn more <i class="fa-sharp fa-solid fa-right-long"></i></a>
+                </div>
+
+                <div class="features-card flex">
+                    <img src="./assets/asset 13.svg" alt="">
+                    <h3>Preference tests</h3>
+                    <p>Find out which designs users perfer and why.</p>
+                    <a href="#" class="secondary-button">Learn More <i class="fa-sharp fa-solid fa-right-long"></i></a>
+                </div>
+
+                <div class="features-card flex">
+                    <img src="./assets/asset 14.svg" alt="">
+                    <h3>Five second tests </h3>
+                    <p>Test comprehensibility by measuring first impression.</p>
+                    <a href="#" class="secondary-button">Learn More <i class="fa-sharp fa-solid fa-right-long"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- big feature section -->
+
+    <section class="big-feture-section"></section>
+        <div class="container flex big-feature-container">
+            <div class="feature-img">
+                <img src="./assets/asset 15.png" alt="">
+            </div>
+            <div class="feature-desc">
+                <h4>Effortless validation for</h4>
+                <h3>Desing professionals</h3>
+                <p>Test interface interaction flow,iconography and more,to help you create intuitive and delightful
+                    expreiences for your user.</p>
+            </div>
+        </div>
+    </section>
+    <section class="big-feture-section"></section>
+        <div class="container flex big-feature-container" style="flex-direction: row-reverse;">
+            <div class="feature-img">
+                <img src="./assets/asset 20.png" alt="">
+            </div>
+            <div class="feature-desc">
+                <h4>Effortless validation for</h4>
+                <h3>Desing professionals</h3>
+                <p>Test interface interaction flow,iconography and more,to help you create intuitive and delightful
+                    expreiences for your user.</p>
+            </div>
+        </div>
+    </section>
+    <section class="big-feture-section"></section>
+        <div class="container flex big-feature-container">
+            <div class="feature-img">
+                <img src="./assets/asset 21.png" alt="">
+            </div>
+            <div class="feature-desc">
+                <h4>Effortless validation for</h4>
+                <h3>Desing professionals</h3>
+                <p>Test interface interaction flow,iconography and more,to help you create intuitive and delightful
+                    expreiences for your user.</p>
+            </div>
+        </div>
+    </section>
+
+
+   <!-- examples section --> 
+          
+
+
+    <section class="examples-section">
+        <div class="contanier">
+            <div class="examples-header flex">
+                <h2>One platform,endless possibilities</h2>
+                <a href="#" class="secondary-button">See more examples <i class="fa-sharp fa-solid fa-right-long"></i></a>
+                        
+            </div>
+            <div class="examples-area flex">
+             <a href="#" class="examples-card">
+                <h3 class="card-text">Can users complete a task in my software interface?</h3>
+            </a> 
+            <a href="#" class="examples-card">
+                <h3 class="card-text">Can users find importent pages on my website?</h3>
+            </a>   
+            <a href="#" class="examples-card">
+                <h3 class="card-text">In my website's intendended audience clear?</h3>
+            </a>   
+            <a href="#" class="examples-card">
+                <h3 class="card-text">Do vistitors understand what a page is about?</h3>
+            </a>     
+            </div>
+        </div>
+    </section>
+
+    <!-- cta section -->
+    <section class="cta-section">
+        <div class="container flex cta-section-container">
+            <h2>Start testing today</h2>
+            <p>Take the guesswork out of design decisions</p>
+            <a href="#" class="primary-button get-started-btn">Get started</a>
+
+        </div>
+    </section>
+
+    <!-- footer -->
+
     <footer>
-        <h2 id="connect">Connect With Me</h2>
-        <p>Email: <a href="mailto:shikharmaurya252@gmail.com"> shikharmaurya252@gmail.com</a></p>
-        <a href="tel:+918429988359">
-            <p>8429988359</p>
-        </a>
-        <a href="aboutus.html">
-            <p>About US</p>
-        </a>
-
-<a href="#">Back To top</a>
+        <div class="container flex footer-container">
+            <a href="#" class="company-logo">
+                <img src="./assets/asset 0.png" alt="company logo">
+            </a>
+    <div class="link-column flex">
+        <h4>Product</h4>
+        <a href="#" class="hover-link">Overview</a>
+        <a href="#" class="hover-link">Pricing</a>
+        <a href="#" class="hover-link">UsabilityHub panel</a>
+        <a href="#" class="hover-link">Customers Page</a>
+        <a href="#" class="hover-link">Status Page</a>
+    </div>
+    <div class="link-column flex">
+        <h4>Methodology</h4>
+        <a href="#" class="hover-link">Overview</a>
+        <a href="#" class="hover-link">Pricing</a>
+        <a href="#" class="hover-link">UsabilityHub panel</a>
+        <a href="#" class="hover-link">Customers Page</a>
+        <a href="#" class="hover-link">Status Page</a>
+    </div>
+    <div class="link-column flex">
+        <h4>Resources</h4>
+        <a href="#" class="hover-link">Overview</a>
+        <a href="#" class="hover-link">Pricing</a>
+        <a href="#" class="hover-link">UsabilityHub panel</a>
+        <a href="#" class="hover-link">Customers Page</a>
+        <a href="#" class="hover-link">Status Page</a>
+    </div>
+        </div>
     </footer>
-    <br><br><br>
+    <div class="subfooter">
+       <div class="container flex subfooter-container">
+        <a class="hover-link" href="#">Privacy policy</a>
+        <a class="hover-link" href="#">Term & Condition</a>
+        <a class="hover-link" href="#">Security Information</a>
+        <a class="hover-link" href="#"><i class="fa-brands fa-square-facebook"></i></a>
+        <a class="hover-link" href="#"><i class="fa-brands fa-twitter"></i></a>
+
+       </div>
+    </div>
 
 
 
-
-
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, a veniam! Quasi illo eaque, tempora dolorem
-        commodi corporis eveniet cum voluptas temporibus hic odit possimus consequuntur illum nemo molestias veniam
-        quam. Commodi dolores expedita provident iste amet id sed officia iure est repudiandae non quod excepturi et,
-        alias at, similique assumenda accusantium ex vero repellat in corporis magni saepe. Nobis, quia at. Repellendus
-        quod unde eveniet earum provident, corporis asperiores dolorem modi totam explicabo sunt ipsam architecto harum
-        amet ab deserunt atque. Voluptatum est pariatur assumenda sunt ab odit laboriosam laudantium aliquid a, eaque
-        ullam maxime at voluptas? Nobis unde sed vero ducimus fuga reprehenderit placeat quod odio, vitae minima dicta
-        harum cupiditate vel exercitationem! Reiciendis, similique id iusto qui libero perferendis enim! Odit at magnam,
-        ex nam unde natus modi alias aperiam earum eligendi culpa, cumque nisi fuga similique? Voluptatem magni, esse
-        fuga ex suscipit in necessitatibus quaerat numquam asperiores illum. Repudiandae beatae, voluptatum corporis a
-        quae sed consequuntur quia molestiae vero delectus natus praesentium ipsum tempore libero earum. Illum, nam aut!
-        Dicta alias maiores fugit deleniti eveniet optio ad vitae velit blanditiis. Sed aliquam, incidunt repellendus
-        labore eum a temporibus, id sapiente quos, sunt dignissimos minima dicta soluta praesentium cumque quae ipsa
-        autem? Omnis iure incidunt voluptas rerum aut? Quidem qui autem voluptates suscipit minus laudantium iusto
-        eveniet, natus deleniti animi pariatur inventore nihil in harum nisi. Alias dignissimos eius voluptas id eos
-        facere laudantium necessitatibus, nihil quibusdam quae veritatis qui repellat perspiciatis cupiditate vero ipsa
-        rerum cum totam ad blanditiis esse tempora? Recusandae optio illum tenetur doloremque ea quasi reprehenderit
-        vitae deserunt fuga, esse soluta magni in atque quidem nihil, odio illo! Possimus minus, molestiae nam quibusdam
-        natus dolorem et quas error voluptatibus vero voluptatum? Nesciunt iste omnis possimus magni quas sequi et
-        accusantium eveniet, dolore culpa?</p>
-
+    <script src="https://kit.fontawesome.com/3466f57a5e.js" crossorigin="anonymous"></script>
 
 </body>
 
